--- a/client/index.html
+++ b/client/index.html
@@ -1,24 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1" />
-    <title>Growvia - Accelerate Growth with Affiliate Marketing</title>
-    <meta name="description" content="Growvia empowers organizations and startups to accelerate growth by leveraging affiliate marketing. Track referrals, commissions, and payments seamlessly." />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Poppins:wght@500;600;700&display=swap" rel="stylesheet">
-    
-    <!-- Open Graph / Facebook -->
-    <meta property="og:type" content="website">
-    <meta property="og:url" content="https://growvia.com/">
-    <meta property="og:title" content="Growvia - Accelerate Growth with Affiliate Marketing">
-    <meta property="og:description" content="Growvia empowers organizations and startups to accelerate growth by leveraging affiliate marketing. Track referrals, commissions, and payments seamlessly.">
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-    <!-- This is a replit script which adds a banner on the top of the page when opened in development mode outside the replit environment -->
-    <script type="text/javascript" src="https://replit.com/public/js/replit-dev-banner.js"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1" />
+  <title>Growvia - Accelerate Growth with Affiliate Marketing</title>
+  <meta name="description"
+    content="Growvia empowers organizations and startups to accelerate growth through affiliate marketing. Track referrals, commissions, and payments seamlessly." />
+  <meta name="keywords"
+    content="affiliate marketing, referral tracking, commission management, SaaS, Growvia, marketing platform" />
+  <meta name="author" content="Growvia" />
+  <meta name="robots" content="index, follow" />
+
+  <!-- Favicon -->
+  <link rel="icon" type="image/png" href="/fav.png" />
+  <link rel="apple-touch-icon" href="/fav.png" />
+
+  <!-- Preconnect for Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Poppins:wght@500;600;700&display=swap"
+    rel="stylesheet" />
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://growviapro.com/" />
+  <meta property="og:title" content="Growvia - Accelerate Growth with Affiliate Marketing" />
+  <meta property="og:description"
+    content="Growvia empowers organizations and startups to accelerate growth through affiliate marketing. Track referrals, commissions, and payments seamlessly." />
+  <meta property="og:image" content="https://growviapro.com/og-image.png" />
+  <meta property="og:site_name" content="Growvia" />
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:url" content="https://growviapro.com/" />
+  <meta name="twitter:title" content="Growvia - Accelerate Growth with Affiliate Marketing" />
+  <meta name="twitter:description"
+    content="Growvia empowers organizations and startups to accelerate growth through affiliate marketing. Track referrals, commissions, and payments seamlessly." />
+  <meta name="twitter:image" content="https://growviapro.com/og-image.png" />
+
+  <!-- Canonical URL -->
+  <link rel="canonical" href="https://growviapro.com/" />
+
+  <!-- Additional Performance Optimizations -->
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="theme-color" content="#161D31" />
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
+  <!-- Replit Dev Banner -->
+  <script type="text/javascript" src="https://replit.com/public/js/replit-dev-banner.js"></script>
+</body>
+
 </html>
